feat: Add Docker Compose setup for easy deployment
- Add docker-compose.yml with backend, frontend, and PostgreSQL services
- Add docker-compose.dev.yml for development with hot-reload
- Create Dockerfiles for backend and frontend
- Add Nginx configuration for frontend with API proxy
- Add Docker commands to Makefile (docker-up, docker-down, etc.)
- Add comprehensive Docker documentation (DOCKER.md, QUICKSTART_DOCKER.md)
- Configure health checks and networking
- Add .dockerignore files to optimize builds
- Support both SQLite (dev) and PostgreSQL (production) via profiles
- Environment variables with sensible defaults

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,80 @@
-version: '3.8'
-
 services:
-  backend:
-    build: ./backend
+  # PostgreSQL Database (optional, for production)
+  postgres:
+    image: postgres:15-alpine
+    container_name: catalog_postgres
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB:-catalog_db}
+      POSTGRES_USER: ${POSTGRES_USER:-catalog_user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-catalog_password}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
     ports:
-      - "8000:8000"
+      - "${POSTGRES_PORT:-5432}:5432"
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-catalog_user}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - catalog_network
+    profiles:
+      - production
+
+  # Backend API
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: catalog_backend
+    ports:
+      - "${BACKEND_PORT:-8000}:8000"
+    # Load .env file if it exists (optional)
     env_file:
       - ./backend/.env
+    # Default environment variables (used if .env doesn't exist)
+    environment:
+      - DATABASE_URL=${DATABASE_URL:-sqlite:///./catalog.db}
+      - SECRET_KEY=${SECRET_KEY:-dev-secret-key-change-in-production-min-32-chars}
+      - ALLOWED_ORIGINS=${ALLOWED_ORIGINS:-http://localhost:3000,http://localhost:5173}
+      - ENVIRONMENT=${ENVIRONMENT:-development}
     volumes:
       - ./backend/uploads:/app/uploads
       - ./backend/catalog.db:/app/catalog.db
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')"]
       interval: 30s
       timeout: 10s
       retries: 3
+      start_period: 40s
+    networks:
+      - catalog_network
+    depends_on:
+      postgres:
+        condition: service_healthy
+        required: false
 
+  # Frontend
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    container_name: catalog_frontend
     ports:
-      - "3000:80"
+      - "${FRONTEND_PORT:-3000}:80"
     depends_on:
       - backend
     restart: unless-stopped
+    networks:
+      - catalog_network
+
+volumes:
+  postgres_data:
+    driver: local
+
+networks:
+  catalog_network:
+    driver: bridge
 
