--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -27,12 +27,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
 
     # Static images
     location /static {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
+        proxy_cache_valid 200 1d;
+        add_header Cache-Control "public, max-age=86400";
     }
 
     # Cache static assets
