feat: Add comprehensive test data for Docker application
- Update init_db.py with 20 diverse desserts in English
- Add desserts from various categories: Cakes, Desserts, Pastries, Cookies, Tarts, Pies, Vegan, Sugar-Free, Gluten-Free, Ice Cream, Breads
- Add image_url fields for all desserts
- Translate all descriptions and ingredients to English
- Create entrypoint.sh to auto-initialize database on first Docker start
- Update Dockerfile to use entrypoint for automatic DB initialization
- Test users: admin/admin123 (admin) and user/user123 (regular user)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -21,6 +21,10 @@ COPY . .
 RUN mkdir -p uploads/images && \
     chmod -R 755 uploads
 
+# Copy entrypoint script
+COPY entrypoint.sh /app/entrypoint.sh
+RUN chmod +x /app/entrypoint.sh
+
 # Create non-root user for security
 RUN useradd -m -u 1000 appuser && \
     chown -R appuser:appuser /app
@@ -33,6 +37,7 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
     CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:8000/health')" || exit 1
 
-# Run application
+# Use entrypoint to initialize database before starting
+ENTRYPOINT ["/app/entrypoint.sh"]
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
 
