chore: очистка проекта для продакшена
- Удалены тестовые скрипты: create_test_users.py, init_db.py
- Удалены dev-конфигурации: docker-compose.dev.yml, Dockerfile.dev, start-docker.sh
- Удалена документация для разработки: INIT_DATA.md, test-profile-navigation.md
- Создан init_prod_db.py для инициализации только структуры БД (без тестовых данных)
- Обновлен entrypoint.sh для использования init_prod_db.py
- Обновлена документация (README.md, DOCKER.md, DEPLOY.md, Makefile)
- Очищены временные файлы (__pycache__, PID, логи)

--- a/deploy.env.example
+++ b/deploy.env.example
@@ -19,5 +19,5 @@ DEPLOY_PROFILE=production
 # DEPLOY_PRE_COMMANDS=cd /var/www/catalog && git fetch
 
 # Optional: Post-deploy commands (comma-separated)
-# DEPLOY_POST_COMMANDS=cd /var/www/catalog && docker-compose exec backend python init_db.py
+# DEPLOY_POST_COMMANDS=cd /var/www/catalog && docker-compose exec backend python init_prod_db.py
 
